--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular-2-local-storage": "^1.0.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "ng2-dragula": "^1.5.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
